# PBT4Automata

./: .gitignore  README.md  automaton.py  grammar.py  pyproject.toml  requirements.txt  tester.py
.github/workflows/: python-publish.yml  tests.yml
src/pbt4automata/: __init__.py  automaton.py  exceptions.py  grammar.py
tests/: test_automaton.py  test_grammar.py
