[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pbt4automata"
version = "0.1.0"
description = "Property-based testing utilities for finite automata and context-free grammars."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "hypothesis>=6",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
