[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pbt4automata"
version = "0.2.0"
description = "Property-based testing utilities for finite automata and context-free grammars."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["automata", "formal-languages", "context-free-grammar", "property-based-testing", "hypothesis"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Education",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "hypothesis>=6",
]

[project.urls]
Homepage = "https://github.com/mrigankpawagi/pbt4automata"
Repository = "https://github.com/mrigankpawagi/pbt4automata"
Issues = "https://github.com/mrigankpawagi/pbt4automata/issues"

[project.optional-dependencies]
dev = [
  "pytest>=7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
